# recursive-db-catalog-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0d714fcae4ce_add_ondelete_cascade_to_order_items_.py  a3f23ecbd060_init.py  ed70226b4583_add_cascade_delete.py
sql/: 2_1.sql  2_2.sql  2_3_1.sql  2_3_2.txt
src/: main.py
src/application/exceptions/: not_enough_product.py
src/application/providers/: uow.py
src/application/usecase/order/: create.py
src/config/: settings.py
src/domain/entities/: category.py  customer.py  order.py  order_item.py  product.py
src/domain/repositories/: base.py
src/infrastructure/db/: db.py  seed.py  session.py  uow.py
src/infrastructure/db/models/: __init__.py  base.py  category.py  customer.py  order.py  order_item.py  product.py
src/infrastructure/db/repositories/: base.py  category.py  customer.py  order.py  order_item.py  product.py
src/infrastructure/exceptions/: google.py  infrastructure.py  repository.py
src/presentation/: cli.py  container.py
src/presentation/api/: router_v1.py
src/presentation/api/v1/: order_router.py
src/presentation/dependencies/order/: create.py
src/presentation/schemas/order/: create.py
