[project]
name = "aiti-guru-test-task"
version = "0.1.0"
description = "AitiGuru test task"
authors = [
    {name = "domster704",email = "domster704@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "typer (>=0.21.1,<0.22.0)",
]

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.scripts]
seed-db = "src.presentation.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.1.0,<26.0.0)",
    "alembic (>=1.18.3,<2.0.0)"
]

[tool.black]
line-length = 88
